
2017-05-13  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* testsuite.src/run_misc.at: set COB_EXIT_WAIT=0 in all testcases
	  where we do extended screenio

2017-05-10  Dave Pitts <dpitts@cozx.com>

	* testsuite.src/listings.at: added "Too many errors" message

2017-05-08  Dave Pitts <dpitts@cozx.com>

	* testsuite.src/listings.at: corrected max error count test

2017-05-03  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* listings-sed.sh: simplified (more likely to run in non GNU/Linux
	  environments)

2017-04-25  Brian Tiffin <btiffin@gnu.org>

	* testsuite.src/run_extensions.at: Drop daylight value test, zero means no
	  rule exists, non-zero means rule exists, testing for bad value is
	  pointless.

2017-04-23  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* cobol85/Makefile.am: HACK for newcob.val in sourcedir during VPATH build

2017-04-11  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* testsuite.src/run_misc.at, testsuite.src/syn_definition.at: moved
	  and renamed syntax tests for RETURNING to syn_defintion,
	  added checks for RETURNING item

2017-03-22  Dave Pitts <dpitts@cozx.com>

	* testsuite.src/listings.at: Added Error/Warning summary to listings.

2017-03-21  Dave Pitts <dpitts@cozx.com>

	* testsuite.src/listings.at: Changed variable indentation and redefines.

2017-03-19  Edward Hart <edward.dan.hart@gmail.com>

	* report.pl, EXEC85.conf.in: fixed bug #363: redefining filename (viz.
	  "report.log") as variable is not portable.
	* report.pl, summary.pl: fixed warnings and added "use warnings;" and
	  "use strict;" directives.

2017-03-19  Dave Pitts <dpitts@cozx.com>

	* testsuite.src/listings.at: Added multiple files listing test.

2017-02-21  Dave Pitts <dpitts@cozx.com>

	* testsuite.src/listings.at: Fixed to pass internal cross reference.

2017-02-20  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* testsuite.src/run_file.at: fixed generation with old autoconf